# modeldrop

./: .gitignore  demo.py  ecology.py  epi.py  example.py  go.py  growth.py  load.py  presentation.md  pyproject.toml  readme.md  requirements.txt  run.sh  run_and_graph_pngs.py  spring.py  upload.sh
growth_pngs/: plot-Exponential Growth.json  plot-Resource Constrained.json  plot-testFn.json
modeldrop/: app.py  basemodel.py  cli.py  demo.py  ecology.py  epi.py  fathers.py  goodwin.py  graphing.py  growth.py  keen.py  main.py  modelgraph.py  property.py  spring.py  turchin.py
modeldrop/assets/: typography.css
