[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "modeldrop"
version = "0.1.0"
description = "A Python package for mathematical modeling with interactive Dash visualizations"
readme = "readme.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.11.1",
    "matplotlib>=3.7.0",
    "Flask>=3.0.0",
    "Pillow>=10.0.0",
    "dash>=3.0.0",
    "dash-bootstrap-components>=1.5.2",
    "dash-html-components>=2.0.0",
    "dash-core-components>=2.0.0",
    "markdown>=3.5.0",
    "markdown-katex>=0.1.0",
]

[project.scripts]
modeldrop = "modeldrop.main:main"

[project.urls]
Homepage = "https://github.com/boscoh/modeldrop"
Repository = "https://github.com/boscoh/modeldrop"
Issues = "https://github.com/boscoh/modeldrop/issues"

