[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "modeldrop"
version = "0.1.0"
description = "A Python package for mathematical modeling with interactive Dash visualizations"
readme = "readme.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Bosco Ho", email = "boscoh@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.11.1",
    "matplotlib>=3.7.0",
    "Pillow>=10.0.0",
    "dash>=3.0.0",
    "dash-bootstrap-components>=1.5.2",
    "cyclopts>=4.0.0",
]

[project.scripts]
modeldrop = "modeldrop.cli:main"

[project.urls]
Homepage = "https://github.com/boscoh/modeldrop"
Repository = "https://github.com/boscoh/modeldrop"
Issues = "https://github.com/boscoh/modeldrop/issues"

[dependency-groups]
dev = [
    "ruff>=0.15.2",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
